alteracao-na-acessibilidade

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
 
-  <link rel="stylesheet" href="./src/css/global.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,13 +16,13 @@
 </head>
 <body>
 
-  <div class="container">
+  <main>
     <div class="card">
-      <img class="qrcode" src="./src/images/image-qr-code.png" alt="QR code image">
-      <h1 class="sub-title">Improve your front-end skills by building projects</h1>
-      <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <img class="card-img" src="./src/images/image-qr-code.png" alt="QR code image">
+      <h1 class="card-title">Improve your front-end skills by building projects</h1>
+      <p class="card-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-  </div>
+  </main>
   
 </body>
 </html>
